Spacing below footer problem fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.main {
+  min-height: calc(100vh - 444.72px);
+}
+
 p {
   line-height: 24px;
 }
